# rust-sim

./: Cargo.toml  readme.md
src/: camera.rs  data.rs  lib.rs  main.rs  mesh.rs  state.rs  texture.rs
src/shaders/: ground.wgsl  shader.wgsl
